--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [hub]
-protocol = https
+	protocol = https
 
 [alias]
 	st = status
@@ -12,3 +12,5 @@ protocol = https
 	email = spacanowski@gmail.com
 [push]
 	default = simple
+[core]
+	editor = vim
